fix{ui): Search form in dark mode

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -2474,7 +2474,8 @@ tbody.warning {
 
 .tab-pane .table > thead:first-child > tr:first-child > th,
 .card .table > thead:first-child > tr:first-child > th,
-.card .table > tbody:first-child > tr:first-child > td {
+.card .table > tbody:first-child > tr:first-child > td,
+.card .table > tbody:first-child > tr > th {
   border-top: 0;
 }
 
